package com.equipo1.netpulse.modelos;

public enum EstadoConexion {
    ONLINE,
    OFFLINE
}