package com.equipo1.netpulse.modelos;

public enum EstadoEmpleado {
    ACTIVO,
    INACTIVO
}