@startuml

title NetPulse - Diagrama de Clases

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 35
skinparam ranksep 45

skinparam class {
    BackgroundColor #F8F9FA
    BorderColor #343A40
    FontColor #212529
}

skinparam enum {
    BackgroundColor #F1F3F5
    BorderColor #495057
}

skinparam ArrowColor #495057
skinparam ArrowFontColor #343A40

' =========================================================
' ENUMERACIONES
' =========================================================

enum EstadoConexion {
    ONLINE
    OFFLINE
}

enum TipoMantenimiento {
    PREVENTIVO
    CORRECTIVO
}

enum EstadoEmpleado {
    ACTIVO
    INACTIVO
}

' =========================================================
' USUARIOS Y ROLES
' =========================================================

class Rol <<Entity>> {
    - id: Integer
    - nombre: String
    - descripcion: String
    --
    + crear(rol: Rol): Rol
    + buscarPorId(id: Integer): Rol
    + buscarPorNombre(nombre: String): Rol
    + obtenerTodos(): List<Rol>
    + buscarTodosPaginados(pageable: Pageable): Page<Rol>
    + actualizar(rol: Rol): Rol
    + eliminarPorId(id: Integer): void
}

class Usuario <<Entity>> {
    - id: Integer
    - nombre: String
    - correo: String
    - contrasena: String
    - activo: Boolean
    - fechaCreacion: LocalDateTime
    - ultimoAcceso: LocalDateTime
    - rol: Rol
    --
    + registrar(usuario: Usuario): Usuario
    + buscarPorId(id: Integer): Usuario
    + buscarPorCorreo(correo: String): Usuario
    + obtenerTodos(): List<Usuario>
    + buscarTodosPaginados(pageable: Pageable): Page<Usuario>
    + obtenerPorRol(rol: Rol): List<Usuario>
    + actualizar(usuario: Usuario): Usuario
    + cambiarContrasena(usuario: Usuario): Usuario
    + activar(usuario: Usuario): Usuario
    + desactivar(usuario: Usuario): Usuario
    + eliminarPorId(id: Integer): void
    + registrarAcceso(usuario: Usuario): Usuario
}

class Empleado <<Entity>> {
    - id: Integer
    - codigoEmpleado: String
    - departamento: String
    - cargo: String
    - telefono: String
    - fechaIngreso: LocalDate
    - estadoLaboral: EstadoEmpleado
    --
    + registrar(empleado: Empleado): Empleado
    + buscarPorId(id: Integer): Empleado
    + buscarPorCodigoEmpleado(codigoEmpleado: String): Empleado
    + obtenerTodos(): List<Empleado>
    + buscarTodosPaginados(pageable: Pageable): Page<Empleado>
    + obtenerPorUsuario(usuario: Usuario): Empleado
    + actualizar(empleado: Empleado): Empleado
    + activar(empleado: Empleado): Empleado
    + desactivar(empleado: Empleado): Empleado
    + eliminarPorId(id: Integer): void
}

Rol "1" -- "0..*" Usuario : asigna
Usuario "1" -- "0..1" Empleado : corresponde

' =========================================================
' CATALOGOS DE EQUIPOS
' =========================================================

class TipoEquipo <<Entity>> {
    - id: Integer
    - nombre: String
    - descripcion: String
    --
    + crear(tipoEquipo: TipoEquipo): TipoEquipo
    + buscarPorId(id: Integer): TipoEquipo
    + buscarPorNombre(nombre: String): TipoEquipo
    + obtenerTodos(): List<TipoEquipo>
    + buscarTodosPaginados(pageable: Pageable): Page<TipoEquipo>
    + actualizar(tipoEquipo: TipoEquipo): TipoEquipo
    + eliminarPorId(id: Integer): void
}

class EstadoEquipo <<Entity>> {
    - id: Integer
    - nombre: String
    - descripcion: String
    --
    + crear(estadoEquipo: EstadoEquipo): EstadoEquipo
    + buscarPorId(id: Integer): EstadoEquipo
    + buscarPorNombre(nombre: String): EstadoEquipo
    + obtenerTodos(): List<EstadoEquipo>
    + buscarTodosPaginados(pageable: Pageable): Page<EstadoEquipo>
    + actualizar(estadoEquipo: EstadoEquipo): EstadoEquipo
    + eliminarPorId(id: Integer): void
}

' =========================================================
' EQUIPOS
' =========================================================

class Equipo <<Entity>> {
    - id: Integer
    - nombre: String
    - marca: String
    - modelo: String
    - numeroSerie: String
    - ubicacion: String
    - ipAddress: String
    - macAddress: String
    - estadoConexion: EstadoConexion
    - fechaRegistro: LocalDateTime
    --
    + registrar(equipo: Equipo): Equipo
    + buscarPorId(id: Integer): Equipo
    + buscarPorNumeroSerie(numeroSerie: String): Equipo
    + obtenerTodos(): List<Equipo>
    + buscarTodosPaginados(pageable: Pageable): Page<Equipo>
    + obtenerPorTipo(tipoEquipo: TipoEquipo): List<Equipo>
    + obtenerPorEstado(estadoEquipo: EstadoEquipo): List<Equipo>
    + obtenerPorResponsable(usuario: Usuario): List<Equipo>
    + actualizar(equipo: Equipo): Equipo
    + asignarResponsable(equipo: Equipo): Equipo
    + cambiarEstado(equipo: Equipo): Equipo
    + actualizarConexion(equipo: Equipo): Equipo
    + eliminarPorId(id: Integer): void
}

TipoEquipo "1" -- "0..*" Equipo : clasifica
EstadoEquipo "1" -- "0..*" Equipo : define
Usuario "0..1" -- "0..*" Equipo : responsable

' =========================================================
' CATEGORIAS DE INCIDENCIAS
' =========================================================

class CategoriaIncidencia <<Entity>> {
    - id: Integer
    - nombre: String
    - descripcion: String
    - activo: Boolean
    --
    + crear(categoria: CategoriaIncidencia): CategoriaIncidencia
    + buscarPorId(id: Integer): CategoriaIncidencia
    + buscarPorNombre(nombre: String): CategoriaIncidencia
    + obtenerTodos(): List<CategoriaIncidencia>
    + buscarTodosPaginados(pageable: Pageable): Page<CategoriaIncidencia>
    + actualizar(categoria: CategoriaIncidencia): CategoriaIncidencia
    + activar(categoria: CategoriaIncidencia): CategoriaIncidencia
    + desactivar(categoria: CategoriaIncidencia): CategoriaIncidencia
    + eliminarPorId(id: Integer): void
}

' =========================================================
' CATALOGOS DE TICKETS
' =========================================================

class PrioridadTicket <<Entity>> {
    - idPrioridad: Integer
    - nombre: String
    --
    + crear(prioridad: PrioridadTicket): PrioridadTicket
    + buscarPorId(idPrioridad: Integer): PrioridadTicket
    + buscarPorNombre(nombre: String): PrioridadTicket
    + obtenerTodos(): List<PrioridadTicket>
    + buscarTodosPaginados(pageable: Pageable): Page<PrioridadTicket>
    + actualizar(prioridad: PrioridadTicket): PrioridadTicket
    + eliminarPorId(idPrioridad: Integer): void
}

class EstadoTicket <<Entity>> {
    - id: Integer
    - nombre: String
    - descripcion: String
    --
    + crear(estado: EstadoTicket): EstadoTicket
    + buscarPorId(id: Integer): EstadoTicket
    + buscarPorNombre(nombre: String): EstadoTicket
    + obtenerTodos(): List<EstadoTicket>
    + buscarTodosPaginados(pageable: Pageable): Page<EstadoTicket>
    + actualizar(estado: EstadoTicket): EstadoTicket
    + eliminarPorId(id: Integer): void
}

' =========================================================
' TICKETS
' =========================================================

class Ticket <<Entity>> {
    - id: Integer
    - descripcion: String
    - fechaCreacion: LocalDateTime
    - fechaAsignacion: LocalDateTime
    - fechaResolucion: LocalDateTime
    --
    + registrar(ticket: Ticket): Ticket
    + buscarPorId(id: Integer): Ticket
    + obtenerTodos(): List<Ticket>
    + buscarTodosPaginados(pageable: Pageable): Page<Ticket>
    + obtenerPorUsuarioReporta(usuario: Usuario): List<Ticket>
    + obtenerPorTecnico(usuario: Usuario): List<Ticket>
    + obtenerPorEquipo(equipo: Equipo): List<Ticket>
    + obtenerPorCategoria(categoria: CategoriaIncidencia): List<Ticket>
    + obtenerPorPrioridad(prioridad: PrioridadTicket): List<Ticket>
    + obtenerPorEstado(estado: EstadoTicket): List<Ticket>
    + asignarTecnico(ticket: Ticket): Ticket
    + cambiarEstado(ticket: Ticket): Ticket
    + cambiarPrioridad(ticket: Ticket): Ticket
    + resolver(ticket: Ticket): Ticket
    + actualizar(ticket: Ticket): Ticket
    + eliminarPorId(id: Integer): void
}

Usuario "1" -- "0..*" Ticket : reporta
Usuario "0..1" -- "0..*" Ticket : atiende
Equipo "1" -- "0..*" Ticket : afecta
CategoriaIncidencia "1" -- "0..*" Ticket : clasifica
PrioridadTicket "1" -- "0..*" Ticket : prioriza
EstadoTicket "1" -- "0..*" Ticket : define

' =========================================================
' MANTENIMIENTOS
' =========================================================

class Mantenimiento <<Entity>> {
    - id: Integer
    - tipo: TipoMantenimiento
    - descripcion: String
    - repuestos: String
    - fecha: LocalDateTime
    --
    + registrar(mantenimiento: Mantenimiento): Mantenimiento
    + buscarPorId(id: Integer): Mantenimiento
    + obtenerTodos(): List<Mantenimiento>
    + buscarTodosPaginados(pageable: Pageable): Page<Mantenimiento>
    + obtenerPorEquipo(equipo: Equipo): List<Mantenimiento>
    + obtenerPorUsuario(usuario: Usuario): List<Mantenimiento>
    + obtenerPorTicket(ticket: Ticket): List<Mantenimiento>
    + actualizar(mantenimiento: Mantenimiento): Mantenimiento
    + eliminarPorId(id: Integer): void
}

Equipo "1" -- "0..*" Mantenimiento : recibe
Usuario "1" -- "0..*" Mantenimiento : realiza
Ticket "0..1" -- "0..*" Mantenimiento : origina

' =========================================================
' ALERTAS DE RED
' =========================================================

class AlertaRed <<Entity>> {
    - id: Integer
    - tipoEvento: String
    - mensaje: String
    - notificacionEnviada: Boolean
    - medioNotificacion: String
    - fecha: LocalDateTime
    --
    + generar(alerta: AlertaRed): AlertaRed
    + buscarPorId(id: Integer): AlertaRed
    + obtenerTodos(): List<AlertaRed>
    + buscarTodosPaginados(pageable: Pageable): Page<AlertaRed>
    + obtenerPorEquipo(equipo: Equipo): List<AlertaRed>
    + obtenerNoNotificadas(): List<AlertaRed>
    + obtenerPorTipoEvento(tipoEvento: String): List<AlertaRed>
    + enviarNotificacion(alerta: AlertaRed): AlertaRed
    + marcarNotificacionEnviada(alerta: AlertaRed): AlertaRed
    + eliminarPorId(id: Integer): void
}

Equipo "1" -- "0..*" AlertaRed : genera

' =========================================================
' HISTORIAL DE ESTADOS
' =========================================================

class HistorialEstado <<Entity>> {
    - id: Integer
    - estadoAnterior: EstadoEquipo
    - estadoNuevo: EstadoEquipo
    - fechaCambio: LocalDateTime
    - motivo: String
    --
    + registrarCambio(historial: HistorialEstado): HistorialEstado
    + buscarPorId(id: Integer): HistorialEstado
    + obtenerTodos(): List<HistorialEstado>
    + obtenerPorEquipo(equipo: Equipo): List<HistorialEstado>
    + obtenerPorUsuario(usuario: Usuario): List<HistorialEstado>
    + eliminarPorId(id: Integer): void
}

Equipo "1" -- "0..*" HistorialEstado : registra
EstadoEquipo "1" -- "0..*" HistorialEstado : estado anterior
EstadoEquipo "1" -- "0..*" HistorialEstado : estado nuevo
Usuario "1" -- "0..*" HistorialEstado : modifica


@enduml